--- a/users - Copie.html
+++ b/users - Copie.html
@@ -50,7 +50,7 @@ document.getElementById('userForm').addEventListener('submit', async (e) => {
     const email = document.getElementById('email').value;
     const password = document.getElementById('password').value;
 
-    const res = await fetch('http://localhost:3000/users', {
+    const res = await fetch('https://monapi-bf4o.onrender.com/users', {
         method: 'POST',
         headers: {
             'Content-Type': 'application/json'
