--- a/users-dashboard.html
+++ b/users-dashboard.html
@@ -81,7 +81,7 @@ document.getElementById('userForm').addEventListener('submit', async e => {
     const code = generateCode();
 
     try {
-        const res = await fetch('/users', {
+        const res = await fetch('/users/html', {
             method: 'POST',
             headers: { 'Content-Type': 'application/json' },
             body: JSON.stringify({ email, password, code, amount })
