--- a/list-users.html
+++ b/list-users.html
@@ -50,7 +50,7 @@ th {
 <script>
 async function loadUsers() {
     try {
-        const res = await fetch('https://monapi-bf4o.onrender.com/users/all');
+        const res = await fetch('https://monapi-bf4o.onrender.com/users/all/html');
         const users = await res.json();
 
         const table = document.getElementById('usersTable');
