--- a/users.html
+++ b/users.html
@@ -1,112 +1,146 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <title>Créer un utilisateur et montant</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background: #f2f2f2;
-        }
-        form {
-            background: white;
-            width: 400px;
-            margin: 40px auto;
-            padding: 20px;
-            border-radius: 6px;
-        }
-        input, button {
-            width: 100%;
-            margin-top: 10px;
-            padding: 8px;
-        }
-        button {
-            background: #007bff;
-            color: white;
-            border: none;
-            cursor: pointer;
-        }
-        p {
-            text-align: center;
-            margin-top: 10px;
-            color: green;
-        }
-    </style>
+<meta charset="UTF-8">
+<title>Créer un utilisateur et transfert</title>
+
+<style>
+body {
+    font-family: Arial, sans-serif;
+    background: #f2f2f2;
+}
+
+form {
+    background: white;
+    width: 800px;
+    margin: 40px auto;
+    padding: 20px;
+    border-radius: 6px;
+}
+
+h3 {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.container {
+    display: flex;
+    gap: 20px;
+}
+
+.box {
+    flex: 1;
+    border: 1px solid #ccc;
+    padding: 15px;
+    border-radius: 6px;
+    background: #fafafa;
+}
+
+.box h4 {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+input, button {
+    width: 100%;
+    margin-top: 10px;
+    padding: 8px;
+}
+
+button {
+    margin-top: 20px;
+    background: #007bff;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
+p {
+    text-align: center;
+    margin-top: 10px;
+    color: green;
+}
+</style>
 </head>
+
 <body>
 
 <form id="userForm">
-    <h3>Créer un utilisateur et montant</h3>
+    <h3>Créer un transfert</h3>
 
-    <input type="email" id="email" placeholder="Email" required />
-    <input type="password" id="password" placeholder="Mot de passe" required />
-    <input type="number" id="amount" placeholder="Montant" required />
+    <div class="container">
 
-    <input type="text" id="senderPhone" placeholder="Téléphone expéditeur" required />
-    <input type="text" id="receiverPhone" placeholder="Téléphone destinataire" required />
+        <!-- 🔵 EXPÉDITEUR -->
+        <div class="box">
+            <h4>Expéditeur</h4>
 
-    <input type="text" id="originLocation" placeholder="Lieu d'expédition" required />
-    <input type="text" id="destinationLocation" placeholder="Lieu de destination" required />
+            <input type="email" id="email" placeholder="Email" required />
+            <input type="password" id="password" placeholder="Mot de passe" required />
 
-    <input type="number" id="fees" placeholder="Frais" required />
-    <input type="number" id="feePercent" placeholder="% de frais" required />
+            <input type="number" id="amount" placeholder="Montant envoyé" required />
+            <input type="text" id="senderPhone" placeholder="Téléphone expéditeur" required />
+            <input type="text" id="originLocation" placeholder="Lieu d'expédition" required />
 
-    <input type="number" id="recoveryAmount" placeholder="Montant de récupération" required />
-    <input type="text" id="recoveryMode" placeholder="Mode de récupération" required />
+            <input type="number" id="fees" placeholder="Frais" required />
+            <input type="number" id="feePercent" placeholder="% de frais" required />
+        </div>
+
+        <!-- 🟢 DESTINATAIRE -->
+        <div class="box">
+            <h4>Destinataire</h4>
+
+            <input type="text" id="receiverPhone" placeholder="Téléphone destinataire" required />
+            <input type="text" id="destinationLocation" placeholder="Lieu de destination" required />
+
+            <input type="number" id="recoveryAmount" placeholder="Montant reçu" required />
+            <input type="text" id="recoveryMode" placeholder="Mode de récupération" required />
+        </div>
+
+    </div>
 
     <button type="submit">Enregistrer</button>
     <p id="message"></p>
 </form>
 
 <script>
-// Génère un code aléatoire : 1 lettre + 3 chiffres
+// Génère un code : 1 lettre + 3 chiffres
 function generateCode() {
     const letters = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ';
     const letter = letters[Math.floor(Math.random() * letters.length)];
-    const number = Math.floor(100 + Math.random() * 900); // 3 chiffres
+    const number = Math.floor(100 + Math.random() * 900);
     return letter + number;
 }
 
 document.getElementById('userForm').addEventListener('submit', async (e) => {
     e.preventDefault();
 
-    // Récupération des valeurs
-    const email = document.getElementById('email').value;
-    const password = document.getElementById('password').value;
-    const amount = parseFloat(document.getElementById('amount').value);
-
-    const senderPhone = document.getElementById('senderPhone').value;
-    const receiverPhone = document.getElementById('receiverPhone').value;
-    const originLocation = document.getElementById('originLocation').value;
-    const destinationLocation = document.getElementById('destinationLocation').value;
-    const fees = parseFloat(document.getElementById('fees').value);
-    const feePercent = parseFloat(document.getElementById('feePercent').value);
-    const recoveryAmount = parseFloat(document.getElementById('recoveryAmount').value);
-    const recoveryMode = document.getElementById('recoveryMode').value;
-
-    const code = generateCode();
+    const data = {
+        email: document.getElementById('email').value,
+        password: document.getElementById('password').value,
+        amount: Number(document.getElementById('amount').value),
+        senderPhone: document.getElementById('senderPhone').value,
+        receiverPhone: document.getElementById('receiverPhone').value,
+        originLocation: document.getElementById('originLocation').value,
+        destinationLocation: document.getElementById('destinationLocation').value,
+        fees: Number(document.getElementById('fees').value),
+        feePercent: Number(document.getElementById('feePercent').value),
+        recoveryAmount: Number(document.getElementById('recoveryAmount').value),
+        recoveryMode: document.getElementById('recoveryMode').value,
+        code: generateCode()
+    };
 
     try {
         const res = await fetch('https://monapi-bf4o.onrender.com/users', {
             method: 'POST',
             headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify({
-                email, password, code, amount,
-                senderPhone, receiverPhone,
-                originLocation, destinationLocation,
-                fees, feePercent,
-                recoveryAmount, recoveryMode
-            })
+            body: JSON.stringify(data)
         });
 
-        const data = await res.json();
-        document.getElementById('message').innerText = data.message;
+        const result = await res.json();
+        document.getElementById('message').innerText = result.message;
 
-        if (res.ok) {
-            document.getElementById('userForm').reset();
-        }
+        if (res.ok) document.getElementById('userForm').reset();
     } catch (err) {
-        console.error(err);
         document.getElementById('message').innerText = 'Erreur serveur';
     }
 });
