Add /users/html route

--- a/list-users.html
+++ b/list-users.html
@@ -53,8 +53,8 @@ th {
 <table>
 <thead>
 <tr>
-    <th colspan="7" class="group-exp">EXPÉDITEUR</th>
-    <th colspan="6" class="group-dest">DESTINATAIRE</th>
+    <th colspan="8" class="group-exp">EXPÉDITEUR</th>
+    <th colspan="7" class="group-dest">DESTINATAIRE</th>
 </tr>
 <tr>
     <!-- EXPÉDITEUR -->
@@ -62,15 +62,16 @@ th {
     <th>Nom</th>
     <th>Email</th>
     <th>Téléphone</th>
-    <th>Pays départ</th>
+    <th>Lieu départ</th>
     <th>Montant envoyé</th>
     <th>Frais</th>
+    <th>Code</th>
 
     <!-- DESTINATAIRE -->
     <th>Prénom</th>
     <th>Nom</th>
     <th>Téléphone</th>
-    <th>Pays destination</th>
+    <th>Lieu destination</th>
     <th>Montant reçu</th>
     <th>Mode</th>
 
@@ -80,7 +81,7 @@ th {
 
 <tbody id="usersTable">
 <tr>
-    <td colspan="14">Chargement...</td>
+    <td colspan="15">Chargement...</td>
 </tr>
 </tbody>
 </table>
@@ -97,7 +98,7 @@ async function loadUsers() {
         if (!users.length) {
             table.innerHTML = `
             <tr>
-                <td colspan="14">Aucun transfert trouvé</td>
+                <td colspan="15">Aucun transfert trouvé</td>
             </tr>`;
             return;
         }
@@ -114,6 +115,7 @@ async function loadUsers() {
                 <td>${user.originLocation}</td>
                 <td>${user.amount}</td>
                 <td>${user.fees}</td>
+                <td>${user.code}</td>
 
                 <!-- DESTINATAIRE -->
                 <td>${user.receiverFirstName}</td>
@@ -133,7 +135,7 @@ async function loadUsers() {
         console.error(err);
         document.getElementById('usersTable').innerHTML = `
         <tr>
-            <td colspan="14" style="color:red;">
+            <td colspan="15" style="color:red;">
                 Erreur lors du chargement des données
             </td>
         </tr>`;
