Add /users/html route

--- a/list-users.html
+++ b/list-users.html
@@ -53,16 +53,15 @@ th {
 <table>
 <thead>
 <tr>
-    <th colspan="8" class="group-exp">EXPÉDITEUR</th>
+    <th colspan="7" class="group-exp">EXPÉDITEUR</th>
     <th colspan="7" class="group-dest">DESTINATAIRE</th>
 </tr>
 <tr>
     <!-- EXPÉDITEUR -->
     <th>Prénom</th>
     <th>Nom</th>
-    <th>Email</th>
     <th>Téléphone</th>
-    <th>Lieu départ</th>
+    <th>Pays départ</th>
     <th>Montant envoyé</th>
     <th>Frais</th>
     <th>Code</th>
@@ -71,7 +70,7 @@ th {
     <th>Prénom</th>
     <th>Nom</th>
     <th>Téléphone</th>
-    <th>Lieu destination</th>
+    <th>Pays destination</th>
     <th>Montant reçu</th>
     <th>Mode</th>
 
@@ -81,7 +80,7 @@ th {
 
 <tbody id="usersTable">
 <tr>
-    <td colspan="15">Chargement...</td>
+    <td colspan="14">Chargement...</td>
 </tr>
 </tbody>
 </table>
@@ -98,7 +97,7 @@ async function loadUsers() {
         if (!users.length) {
             table.innerHTML = `
             <tr>
-                <td colspan="15">Aucun transfert trouvé</td>
+                <td colspan="14">Aucun transfert trouvé</td>
             </tr>`;
             return;
         }
@@ -110,7 +109,6 @@ async function loadUsers() {
                 <!-- EXPÉDITEUR -->
                 <td>${user.senderFirstName}</td>
                 <td>${user.senderLastName}</td>
-                <td>${user.email}</td>
                 <td>${user.senderPhone}</td>
                 <td>${user.originLocation}</td>
                 <td>${user.amount}</td>
@@ -135,7 +133,7 @@ async function loadUsers() {
         console.error(err);
         document.getElementById('usersTable').innerHTML = `
         <tr>
-            <td colspan="15" style="color:red;">
+            <td colspan="14" style="color:red;">
                 Erreur lors du chargement des données
             </td>
         </tr>`;
